Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15012

ASAN: numerous test failures in PS

    XMLWordPrintable

Details

    • 10.1.31

    Description

      Lits of tests failing: main.multi_update main.mysql_client_test main.mysql_client_test_nonblock main.derived_view main.ps_ddl main.subselect_sj main.subselect_sj_jcl6 main.view. In normal, not in --ps-protocol.

      In all cases, the freed memory is read or written into in

          #0 0x603f51 in THD::rollback_item_tree_changes() sql/sql_class.cc:2257
      

      usually called from

          #1 0x6d3951 in Prepared_statement::cleanup_stmt() sql/sql_prepare.cc:3235
          #2 0x6e0a45 in Prepared_statement::execute(String*, bool) sql/sql_prepare.cc:3958
          #3 0x6e13e8 in Prepared_statement::execute_loop(String*, bool, unsigned char*, unsigned char*) sql/sql_prepare.cc:3591
          #4 0x6e1e9d in mysql_sql_stmt_execute(THD*) sql/sql_prepare.cc:2740
      

      At least in multi_update, it fails on the second execution of PS.

      Attachments

        Issue Links

          Activity

            People

              sanja Oleksandr Byelkin
              serg Sergei Golubchik
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3h
                  3h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.