MDEV-15012: ASAN: numerous test failures in PS

First roll back changes, then free Items which can lead to memory freeing.